lab9/tests/bad/function_named_void.al
int void(boolean b)
begin
end